[package]
name = "ledger_installer"
version = "0.1.0"
edition = "2021"

[dependencies]
ledger-apdu = { version = "0.10" }
ledger-transport-hidapi = { version = "0.10.0" }
minreq = { version = "2.11.0", features = ["https", "json-using-serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
hex = "0.4"
form_urlencoded = "1.2.1"
