[package]
name = "ledger_manager"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
license-file = "LICENCE"
keywords = ["bitcoin", "ledger", "install", "setup", "app"]
description = "Ledger Live but without the scams. Just install the Bitcoin app."

[dependencies]
ledger-apdu = { version = "0.10" }
ledger-transport-hidapi = { version = "0.10.0" }
minreq = { git = "https://github.com/darosior/minreq", branch = "try_all_resolved_addrs", features = ["https", "json-using-serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
hex = "0.4"
form_urlencoded = "1.2.1"

[[bin]]
name = "ledmanager"
path = "src/bin/ledmanager.rs"
