[package]
name = "baaca"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
license-file = "LICENCE"
keywords = ["bitcoin", "ledger", "install", "setup", "app"]
description = "Ledger Live but without the scams. Just install the Bitcoin app."

[dependencies]
# Common
ledger-apdu = { version = "0.10" }
ledger-transport-hidapi = { version = "0.10.0" }
minreq = { git = "https://github.com/darosior/minreq", branch = "try_all_resolved_addrs", features = ["https", "json-using-serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
hex = "0.4"
form_urlencoded = "1.2.1"

# Gui
iced_runtime = "0.12.1"
iced = { version = "0.12.1",default-features = false, features = ["webgl", "image"] }
tokio = { version = "1.37.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
async-channel = "2.2.0"
log = "0.4.21"
console_log = "1.0"
fern = "0.6.2"
chrono = "0.4.33"
colored = "2.1.0"

[[bin]]
name = "baaca-cli"
path = "src/bin/baaca-cli.rs"

[[bin]]
name = "baaca-gui"
path = "src/bin/baaca-gui.rs"

