[package]
name = "ledger_manager"
version = "0.1.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
keywords = ["bitcoin", "ledger", "install", "setup", "app"]
description = "Ledger Live but without the scams. Just install the Bitcoin app."

edition.workspace = true
license-file.workspace = true
readme.workspace = true


[dependencies]
log = "0.4"
ledger-apdu = { version = "0.10" }
ledger-transport-hidapi = { version = "0.10.0" }
minreq = { version = "2.11", features = ["https", "json-using-serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
hex = "0.4"
form_urlencoded = "1.2.1"
